redirect not finished yet

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,6 +4,7 @@
     <div>
       <a>index.html</a>
       <a href="https://wiktrek.xyz">wiktrek.xyz</a>
+      <a href="https://projects.wiktrek.xyz">projects</a>
     </div>
   </body>
 </html>
