redirect not finished yet

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,6 +5,7 @@
       <a>index.html</a>
       <a href="https://wiktrek.xyz">wiktrek.xyz</a>
       <a href="https://projects.wiktrek.xyz">projects</a>
+      <a href="https://rust.wiktrek.xyz">rust</a>
     </div>
   </body>
 </html>
