--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,6 +6,7 @@
   <body>
     <div>
       <a>index.html</a>
+      <a>rust </a>
       <a href="https://wiktrek.xyz">wiktrek.xyz</a>
       <a href="https://projects.wiktrek.xyz">projects</a>
       <a href="https://rust.wiktrek.xyz">rust</a>
