--- a/src/routes/html/index.html
+++ b/src/routes/html/index.html
@@ -5,6 +5,6 @@
 <body>
   <div>
     <a className="text-white">rustapi</a>
-    <a href="https://wiktrek.xyz">wiktrek.xyz</a>
+    <a href="https://wiktrek.xyz" target="_blank">wiktrek.xyz</a>
   </div>
 </body>
