Chuck norris api pokemon.rs -> apis.rs

--- a/src/routes/html/index.html
+++ b/src/routes/html/index.html
@@ -2,9 +2,11 @@
 <head>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <div>
-    <a className="text-white">rustapi</a>
+<main
+  class="justify-center text-center items-center h-screen text-5xl bg-[#0D0A0B] text-[#FA9F42]"
+>
+  <div class="grid">
+    <a href="https://github.com/wiktrek/rustapi" target="_blank">rustapi</a>
     <a href="https://wiktrek.xyz" target="_blank">wiktrek.xyz</a>
   </div>
-</body>
+</main>
