--- a/src/routes/html/index.html
+++ b/src/routes/html/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<head>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<main
-  class="justify-center text-center items-center h-screen text-5xl bg-[#0D0A0B] text-[#FA9F42]"
->
-  <div class="grid">
-    <a href="https://github.com/wiktrek/rustapi" target="_blank">rustapi</a>
-    <a href="https://wiktrek.xyz" target="_blank">wiktrek.xyz</a>
-  </div>
-</main>
+<html>
+  <head>
+    <title>Index</title>
+  </head>
+  <body>
+    <div>
+      <a>index.html</a>
+      <a>rust api</a>
+      <a href="https://wiktrek.xyz">wiktrek.xyz</a>
+      <a href="https://projects.wiktrek.xyz">projects</a>
+      <a href="https://rust.wiktrek.xyz">rust</a>
+      <a href="https://rust.wiktrek.xyz/htmx.html">htmx</a>
+    </div>
+  </body>
+</html>
