--- a/src/routes/html/index.html
+++ b/src/routes/html/index.html
@@ -5,8 +5,25 @@
   </head>
   <body>
     <div>
-      <a>index.html</a>
-      <a>rust api</a>
+      <ul>
+        <a>Apis:</a>
+        <li>
+          <a href="https://rust.wiktrek.xyz/api/hottake"
+            >get a random dev hot take</a
+          >
+        </li>
+        <li>
+          <a href="https://rust.wiktrek.xyz/api/dadjoke"
+            >get a random dad joke</a
+          >
+        </li>
+        <li>
+          <a href="https://rust.wiktrek.xyz/api/chucknorris"
+            >get a random chuck norris joke</a
+          >
+        </li>
+      </ul>
+
       <a href="https://wiktrek.xyz">wiktrek.xyz</a>
       <a href="https://projects.wiktrek.xyz">projects</a>
       <a href="https://rust.wiktrek.xyz">rust</a>
