--- a/src/routes/html/index.html
+++ b/src/routes/html/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Index</title>
+    <title>rust - wiktrek.xyz</title>
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
+  <body class="bg-[#161718] text-[#0cabc0] decoration-transparent">
     <div>
       <ul>
         <a>Apis:</a>
